# core

./: .env  Dockerfile  conftest.py  pyproject.toml
alembic/: env.py
alembic/versions/: 22608b48bb44_init.py  875de96afb28_add_created_at_to_order.py  bdd999ed5d1e_unique_constraint_to_cart.py
app/: main.py
app/S3/: client.py  service.py
app/api/: api_router.py  deps.py
app/api/controllers/: auth_controller.py  cart_controller.py  cart_product_controller.py  category_controller.py  controller_contract.py  order_controller.py  order_product_controller.py  product_controller.py  stats_controller.py  user_controller.py
app/auth/: .env  auth_service.py  deps.py  dto.py  exceptions.py  jwt.py  password_manager.py
app/auth/certs/: jwt_privatekey.pem  jwt_publickey.pem
app/db/: db_manager.py
app/db/dao/: cart_dao.py  cart_product_dao.py  category_dao.py  crudbase_dao.py  order_dao.py  order_product_dao.py  product_dao.py  stats_dao.py  user_dao.py
app/db/models/: __init__.py  base.py  (+7 more)
app/dto/: base_dto.py  cart_dto.py  cart_product_dto.py  category_dto.py  order_dto.py  order_product_dto.py  product_dto.py  stats_dto.py  user_dto.py
app/exceptions/: S3.py  base_exception.py  cart.py  category.py  entity.py  order.py  product.py
app/job_service/: celery_app.py  jobs.py
app/services/: base_service.py  cart_product_service.py  cart_service.py  category_service.py  order_product_service.py  order_service.py  product_service.py  stats_service.py  user_service.py
app/settings/: config.py
app/utils/: camel.py  mapper.py
tests/api/: test_category.py
(+3 files in other folders)
