[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
asyncpg = "^0.30.0"
alembic = "^1.13.3"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.6.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pyjwt = "^2.9.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi-restful = "^0.6.0"
typing-inspect = "^0.9.0"
pydantic = {extras = ["email"], version = "^2.9.2"}
cryptography = "^43.0.3"
black = "^24.10.0"
redis = "^5.2.0"
celery = "^5.4.0"
flower = "^2.0.1"
websockets = "^13.1"
aiobotocore = "^2.15.2"
python-multipart = "^0.0.17"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
httpx = "^0.28.1"
isort = "^5.13.2"
python-json-logger = "^3.2.1"
webdriver-manager = "^4.0.2"
requests = "^2.32.4"
pytest-playwright = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

